# EvcVideoPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chan/evcvideoplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  EvcPlayer.cpp  EvcPlayer.h  JNICallbackHelper.cpp  JNICallbackHelper.h  VideoChannel.cpp  VideoChannel.h  log4c.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/java/com/chan/evcvideoplayer/: MainActivity.kt
app/src/main/java/com/chan/evcvideoplayer/player/: EvcPlayer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/chan/evcvideoplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
